Fix container align

--- a/resources/sass/main/container.scss
+++ b/resources/sass/main/container.scss
@@ -36,5 +36,6 @@
 .main-content {
   min-height: 60vh;
   max-width: 100%;
+  align-items: baseline;
   margin-bottom: $spacer *2;
 }
